# chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  test.py  train_data.py
flagged/: log.csv
google_chatbot/: chatbot.py  examples.py  speech.py
