[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Tom Downey <tom.downey@sky.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
gradio = "^3.44.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
